--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Dice Game</title>
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-
+	
 </head>
 <body>
 
@@ -53,9 +53,9 @@
 	
 	</div>
 
-	<script type="text/javascript">
 	
-	function throwDice(){
+	<script>
+		function throwDice(){
 		var randomDie = Math.round(Math.random() *5)+1; //This will produce a number between 1 and 6.
 		var imageName = "d" + randomDie + ".gif";
 		document.images['myDie1'].src = imageName;
@@ -68,8 +68,21 @@
 
 		var dieTotal = randomDie + randomDie2;
 
+		//var dragonHitPoints = 20;
+		//var playerHitPoints = 20;
+	 	//while(dragonHitPoints > 0){
+	 	//var remDragonPoints = dragonHitPoints-dieTotal;
+	 	//document.write(remDragonPoints);
+	 //}
+	 //	while(playerHitPoints>0){
+	 //	var remPlayerPoints = playerHitPoints-dieTotal;
+	 //	document.write(remPlayerPoints);
+	 //}
+
 		if (dieTotal < 9) {
-			alert("You have been burnt to a crisp!  Better luck next time!");
+			alert("You rolled a " + dieTotal + "." + " You have been burnt to a crisp!  Better luck next time!");
+		} else{
+			alert("Congratulations!  You rolled a " + dieTotal + "." + " You beat the dragon!");
 		}
 	}
 
@@ -78,9 +91,14 @@
  		document.getElementById(elementId).style.display="block";
 	}
 
+	
+
+	
+
+
+
 
 	</script>
-
 </body>
 </html>
 
